# H1st-IoT

./: .gitignore  .prospector.yaml  MANIFEST.in  README.md  deploy.py  manage.py  pyproject.toml  requirements.txt  run-server.py  settings.py  setup.cfg  setup.py  test-run.sh  urls.py
.ebextensions/: autoscaling.config  django.config
.elasticbeanstalk/: config.yml
arimo/: manifest.json  metadata.json
bai-pkg/: .gitignore  adhoc-agg-data.yaml  adhoc-all.yaml  adhoc-conso-equipment-unique-type-group-data.yaml  adhoc-eval-ppp.yaml  adhoc-ppp-anom-alert.yaml  adhoc-ppp-anom-score.yaml  adhoc-profile-data-flds.yaml  adhoc-rm-s3-tmp.yaml  adhoc-test-load-data.yaml  adhoc-train-ppp.yaml  arimo.manifest.json  daily-agg-data.yaml  daily-all.yaml  daily-conso-equipment-unique-type-group-data.yaml  daily-ppp-anom-alert.yaml  daily-ppp-anom-score.yaml  daily-test-load-data.yaml  monthly-all.yaml  monthly-conso-equipment-unique-type-group-data.yaml  monthly-eval-ppp.yaml  monthly-test-load-data.yaml  monthly-train-ppp.yaml  requirements.txt
data_src/: KmeansTest.csv  KmeansTest1.csv  TransformTest.csv  TransformTest2.csv  admission.s.csv  admission2.csv  admissionWithNa.csv  airline-transform.3.csv  airline1k.csv  airport_arrdelay.csv  airquality.csv  ca_housing.csv  graph.csv  graph2.csv  graph22.csv  graph3.csv  graph4.csv  graphNumeric.csv  graphNumeric2.csv  graphNumeric3.csv  graphNumeric4.csv  table.csv  table_noheader.csv  table_noheader_noNA.csv
docs/: build.sh  conf.py  index.md  parse-docstr.sh  publish.sh
h1st_iot/: __init__.py  api.py  ppp_ad.py  pred_maint.py  urls.py  util.py
infra/: .gitignore  README.md
integration/: bench.airline.R  test-clustering.r  test-crossvalidation.r  test-linearmodels.r  test-loglikelihood.r  test-mapreduce.r  test-metrics.r  test-naivebayes.R  test-pa-ddf.r  test-shark.r  test-thriftclient.r  test_adatao.aggregate.R  test_adatao.aggregate_groupby.R  (+7 more)
test/: run  (+14 more)
(+584 files in other folders)
