[tool.poetry]
name = 'H1st-IoT'
version = '0.0.7'
description = 'H1st IoT'
authors = ['Aitomatic, Inc. <Engineering@Aitomatic.com>']
license = 'Apache-2.0'
readme = 'README.md'
homepage = 'https://GitHub.com/Aitomatic/H1st-IoT'
repository = 'https://GitHub.com/Aitomatic/H1st-IoT'

packages = [
  {include = 'h1st_iot'}
]


[tool.poetry.dependencies]
Python = '>= 3.8, < 3.10'

Django = '^4.0'
Django-Silk = '^4.2.0'
DRF-Writable-Nested = '^0.6.3'

PsycoPG2-binary = '^2.9.2'


[build-system]
requires = ['Poetry-Core >= 1.0.0']
build-backend = 'poetry.core.masonry.api'
