[tool.poetry]
name = 'H1st-IoT'
version = '0.0.8'
description = 'H1st IoT'
authors = ['Aitomatic, Inc. <Engineering@Aitomatic.com>']
license = 'Apache-2.0'
readme = 'README.md'
homepage = 'https://GitHub.com/Aitomatic/H1st-IoT'
repository = 'https://GitHub.com/Aitomatic/H1st-IoT'

packages = [
  {include = 'h1st_iot'}
]


[tool.poetry.dependencies]
Python = '>= 3.8, < 3.10'

Django = '^4.0'
DjangoRESTFramework = '^3.13.1'
Django-Silk = '^4.2.0'
DRF-Writable-Nested = '^0.6.3'

PsycoPG2-binary = '^2.9.2'


[build-system]
requires = [
  'Poetry-Core >= 1.0.7',
  'SetUpTools >= 60.1.0',   # github.com/pypa/pip/issues/10743#issuecomment-998321115
]
build-backend = 'poetry.core.masonry.api'
